force-app/main/default/objects/Deal_Sheet_Line_Item__c/Deal_Sheet_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Deal Sheet Line Item</label>
    <nameField>
        <displayFormat>DSLI-{000000}</displayFormat>
        <label>Deal Sheet Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Sheet Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>