force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Calendar_Day__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Day__c</fullName>
    <description>This field is created as a replica of calendar Workdays</description>
    <label>Calendar Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>