force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Calendar_Days__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Days__c</fullName>
    <formula>IF(AND((5 - (CASE(MOD(Start_Date__c - DATE(1900,1,6),7),0,0,1,5,2,5,3,4,4,3,5,2,6,1,0)) &lt; 
(CASE(MOD(End_Date__c  - DATE(1900,1,6),7),0,0,1,0,2,1,3,2,4,3,5,4,6,5,0))), 
(((End_Date__c - Start_Date__c) + 1) &lt; 7)), 
((CASE(MOD(End_Date__c - DATE(1900,1,6),7),0,0,1,0,2,1,3,2,4,3,5,4,6,5,0)) - 
(5 - (CASE(MOD(Start_Date__c - DATE(1900,1,6),7),0,0,1,5,2,5,3,4,4,3,5,2,6,1,0)))),
(((FLOOR(((End_Date__c - Start_Date__c) - 
(CASE(MOD(Start_Date__c - DATE(1900,1,6),7),0,0,1,6,2,5,3,4,4,3,5,2,6,1,0))) / 7)) * 5) +
(CASE(MOD(Start_Date__c - DATE(1900,1,6),7),0,0,1,5,2,5,3,4,4,3,5,2,6,1,0)) + 
(CASE(MOD(End_Date__c - DATE(1900,1,6),7),0,0,1,0,2,1,3,2,4,3,5,4,6,5,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Workdays</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>