force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Cost_Days__c.field-meta.xml
<CustomField>
    <fullName>Cost_Days__c</fullName>
    <label>Cost Days</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>