force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Daily_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Bill_Rate__c</fullName>
    <inlineHelpText>Suggested Rates:
Managing Director:  3,000 
Senior Director:  2,883 
Director:  2,235 
Associate Director:  1,767 
Associate Consultant:  1,333 
Business Analyst:  1,112 
IC:  2,000</inlineHelpText>
    <label>Daily Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>