force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Daily_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Cost_Rate__c</fullName>
    <label>Daily Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>