force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet__c</fullName>
    <label>Deal Sheet</label>
    <referenceTo>Deal_Sheet__c</referenceTo>
    <relationshipLabel>Deal Sheet Line Items</relationshipLabel>
    <relationshipName>Deal_Sheet_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>