force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Dedicated_Resource__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Resource</label>
    <type>Checkbox</type>
</CustomField>