force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Fixed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Revenue__c</fullName>
    <label>Fixed Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>