force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Line_Notes__c.field-meta.xml
<CustomField>
    <fullName>Line_Notes__c</fullName>
    <label>Line Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>