force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Resource_Margin__c.field-meta.xml
<CustomField>
    <fullName>Resource_Margin__c</fullName>
    <formula>Total_Revenue__c -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>