force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Resource_Margin_Perc__c.field-meta.xml
<CustomField>
    <fullName>Resource_Margin_Perc__c</fullName>
    <formula>IF (  AND(Total_Revenue__c != 0,ISPICKVAL(Line_Type__c,&quot;Resource&quot;)) ,  Resource_Margin__c / Total_Revenue__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>