force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Resource_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Resource_Utilization__c</fullName>
    <formula>IF( ISPICKVAL(Line_Type__c,&quot;Resource&quot;), Billable_Days__c/Calendar_Days__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Utilization</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>