force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Senior Director</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Associate Director</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Independent Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>