force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Suggested_Resource__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Resource_Role__c</field>
            <operation>equals</operation>
            <value>SSA Associate Consultant, SSA Associate Director, SSA Business Analyst, SSA Director, SSA IC, SSA Managing Director, SSA Other, SSA Senior Director, SSA Vice President</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Sheet Line Items</relationshipLabel>
    <relationshipName>Deal_Sheet_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>