force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF( Dedicated_Resource__c = TRUE, Daily_Cost_Rate__c *  Calendar_Days__c , Daily_Cost_Rate__c * Billable_Days__c )+ Fixed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>