force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Total_Cost_Field__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Field__c</fullName>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>