force-app/main/default/objects/Deal_Sheet_Line_Item__c/fields/Total_Revenue_Field__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Field__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>