force-app/main/default/objects/Deal_Sheet_Line_Item__c/validationRules/Billable_Days_less_than_Calendar_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_Days_less_than_Calendar_Days</fullName>
    <active>true</active>
    <errorConditionFormula>Billable_Days__c &gt;  Calendar_Days__c</errorConditionFormula>
    <errorDisplayField>Billable_Days__c</errorDisplayField>
    <errorMessage>Billable Days cannot be more than Calendar Days</errorMessage>
</ValidationRule>