force-app/main/default/objects/Deal_Sheet_Line_Item__c/validationRules/End_Date_must_be_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Start_Date__c )),NOT(ISBLANK( End_Date__c )), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorMessage>The end date cannot be before the start date.</errorMessage>
</ValidationRule>