force-app/main/default/objects/Deal_Sheet_Line_Item__c/validationRules/Role_must_match_Suggested_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_must_match_Suggested_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Suggested_Resource__c )), TEXT(Role__c)  &lt;&gt;  RIGHT(TEXT(Suggested_Resource__r.pse__Resource_Role__c),
LEN(TEXT(Suggested_Resource__r.pse__Resource_Role__c))-4),
NOT(ISPICKVAL( Role__c ,&quot;Independent Contractor&quot;)) )</errorConditionFormula>
    <errorDisplayField>Suggested_Resource__c</errorDisplayField>
    <errorMessage>The Level you selected does not match the level of the Suggested Resource.</errorMessage>
</ValidationRule>